# imgui-file-browser

./: CMakeLists.txt  README.md  README_CN.md
example/: CMakeLists.txt
example/SFML3/: CMakeLists.txt  imgui-SFML.cpp  imgui-SFML.hpp  main.cpp  texture_atlas.cpp  texture_atlas.hpp
src/: imgui-file_browser.cpp  imgui-file_browser.hpp
